--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "*"
+  },
+  "devDependencies": {
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "gulp": "^3.9.1",
+    "gulp-rollup": "^2.11.0",
+    "rollup-plugin-babel": "^2.7.1"
   }
 }
