--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp",
+    "release": "gulp release"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +17,10 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.2.2",
     "gulp-rollup": "^2.11.0",
+    "gulp-uglify": "^2.1.2",
     "rollup-plugin-babel": "^2.7.1"
   }
 }
