--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jquery.binding",
+  "name": "minimal-binding",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "*"
+    "jquery": "*",
+    "sizzle": "^2.3.3"
   },
   "devDependencies": {
     "babel-plugin-external-helpers": "^6.22.0",
